# fh-variant-triage

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  DATA_SOURCES.md  LICENSE  METHODS.md  MODEL_CARD.md  Makefile  PEER_REVIEW_NOTES.md  README.md  REVIEWER_GUIDE.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  dataset_or_collaboration.md  feature_request.md  scientific_review.md  validation_report.md
.github/workflows/: tests.yml
dashboard/: index.html
docs/: EXTERNAL_VALIDATION_PROTOCOL.md  FUTURE_SESSION_HANDOFF.md  GITHUB_PUBLISHING.md  INPUT_SCHEMA.md  MANUSCRIPT_DRAFT.md  OUTREACH_TARGETS.md  PROJECT_BRIEF.md  REPO_MAP.md  VALIDATION_REQUEST.md
examples/: example_annotated.vcf  example_variants.csv
reports/: impact_estimate.md  research_report.md  run_summary.md
scripts/: analyze_model.py  audit_artifacts.py  build_dataset.py  download_clinvar.py  estimate_impact.py  generate_manifest.py  generate_report.py  learning_curve.py  predict_variant.py  run_pipeline.py  score_unlabeled.py  score_variants_csv.py  score_variants_vcf.py  train_baseline.py  train_gene_models.py  validate_splits.py
tests/: test_build_dataset.py
