[project]
name = "fh-variant-triage"
version = "0.1.0"
description = "Research prototype for familial hypercholesterolemia variant triage from open ClinVar data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Josiah Wilson" }]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
